functional Crud operations

--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/styles.css" />
-    <title>Index</title>
+
+    <title>Notes</title>
 </head>
 <body>
-    <h1>Notes App</h1>
-    <a href="/notes">Notes</a>
+    <h1>Notes</h1>
+    <ul>
+        <% for (let i = 0; i < notes.length; i++) { %>
+            <li><a href="/notes/<%= notes[i].id %>"><%= notes[i].title %></a></li>
+        <% } %>
+    </ul>
+    <a href="/createNote" class="button">Create Note</a>
+
 </body>
 </html>
