--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7,3 +7,17 @@ body{
     margin: 0;
     padding: 0;
 }
+
+input[type=submit]{
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+ul{
+    list-style-type: none;
+}
