--- a/views/note404.ejs
+++ b/views/note404.ejs
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/styles.css" />
-    <title>Index</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Notes App</h1>
-    <a href="/notes">Notes</a>
+    <h1>404</h1>
 </body>
 </html>
