--- a/views/createNote.ejs
+++ b/views/createNote.ejs
@@ -8,6 +8,7 @@
     <title>New Note</title>
 </head>
 <body>
+    <div class="container">
     <form method="post" action="/notes">
         <label for="title">Title</label>
         <input type="text" name="title" id="title" />
@@ -17,5 +18,6 @@
         
     </form>
     <a href="/notes">Back to notes</a>
+</div>
 </body>
 </html>
