--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: #f5f5f5;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
@@ -20,4 +20,46 @@ input[type=submit]{
 
 ul{
     list-style-type: none;
+} */
+
+body{
+    background-color: #f5f5f5;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #333;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+.container ul li {
+    list-style-type: none;
+}
+
+.container form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container form input[type=text]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 8px;
+    box-sizing: border-box;
 }
