--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,19 @@
 
     <title>Notes</title>
 </head>
-<body>
-    <h1>Notes</h1>
-    <ul>
-        <% for (let i = 0; i < notes.length; i++) { %>
-            <li><a href="/notes/<%= notes[i].id %>"><%= notes[i].title %></a></li>
-        <% } %>
-    </ul>
-    <a href="/createNote" class="button">Create Note</a>
 
+<body>
+    <div class="container">
+        <h1>Notes</h1>
+        <ul>
+            <% for (let i=0; i < notes.length; i++) { %>
+                <li><a href="/notes/<%= notes[i].id %>">
+                        <%= notes[i].title %>
+                    </a></li>
+                <% } %>
+        </ul>
+        <a href="/createNote" class="button">Create Note</a>
+    </div>
 </body>
+
 </html>
